[BugFix] citation display on mobile devices

--- a/docs/template/index.html
+++ b/docs/template/index.html
@@ -261,7 +261,7 @@
 
   {%if citation%}
   <!-- BibText citation + copy to clipboard -->
-  <section class="section hero {%if blockcount%2==0%}is-light{%endif%}{%set blockcount=blockcount+1%}" id="citation">
+  <section class="section {%if blockcount%2==0%}is-light{%endif%}{%set blockcount=blockcount+1%}" id="citation">
     <div class="container is-max-desktop content">
       <h2 class="title">Citation 🤩</h2>
       <div class="code-container">
